fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ footer address{
 .main-outer{
     position: relative;
     height: 70vh;
+    overflow: hidden;
 }
 
 @media (min-width:1000px)
